Fixed overflow auto on kanban container

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -78,9 +78,3 @@ p {
     flex-direction: row;
 	height: 100%;
 }
-.dashboard__content__container {
-    display: flex;
-    flex-direction: row;
-    padding: 1em;
-    width: 90%;
-}
