--- a/front-end/src/views/dashboard/index.css
+++ b/front-end/src/views/dashboard/index.css
@@ -6,7 +6,3 @@
     display: flex;
     flex-direction: row;
 }
-.dashboard__kanban__container {
-    padding: 2rem;
-    display: flex;
-}
